--- a/common.fr.po
+++ b/common.fr.po
@@ -240,17 +240,17 @@ msgstr "^2Appuyez sur ^3%s^2 pour terminer l'échauffement"
 #: qcsrc/client/hud/panel/infomessages.qc:208
 #, c-format
 msgid "%sNeed active players for: %s"
-msgstr ""
+msgstr "%sJoueurs actifs nécessaires pour : %s"
 
 #: qcsrc/client/hud/panel/infomessages.qc:212
 #, c-format
 msgid "%sWaiting for 1 player to join..."
-msgstr ""
+msgstr "%sEn attente de 1 joueur…"
 
 #: qcsrc/client/hud/panel/infomessages.qc:214
 #, c-format
 msgid "%sWaiting for %d players to join..."
-msgstr ""
+msgstr "%sEn attente de %d joueurs…"
 
 #: qcsrc/client/hud/panel/infomessages.qc:226
 msgid "Teams are unbalanced!"
