--- a/common.fr.po
+++ b/common.fr.po
@@ -1567,18 +1567,18 @@ msgid ""
 "life per round. There are no pickups available on the map in %s, making the "
 "gameplay fast-paced and focused on combat."
 msgstr ""
-"%s est un type de partie courant en plusieurs manches et joué en équipes, "
-"dans lequel les joueurs apparaissent avec toutes les armes disponibles, "
-"disposent d'un maximum de santé et d'armure, mais n'ont qu'une seule vie par "
-"manche. Il n'y a aucun objet disponible sur la carte en %s, ce qui rend le "
-"gameplay effréné et axé sur le combat."
+"%s est un type de partie en équipe courant qui se joue en plusieurs manches, "
+"au cours desquelles les joueurs apparaissent avec toutes les armes "
+"disponibles, disposent d'un maximum de santé et d'armure, mais n'ont qu'une "
+"seule vie par manche. Il n'y a aucun objet disponible sur la carte en %s, ce "
+"qui rend le gameplay effréné et axé sur le combat."
 
 #: qcsrc/common/gametypes/gametype/clanarena/clanarena.qc:10
 msgid ""
 "Rounds start with a ten second grace period where weapons cannot be fired, "
 "so it's a good opportunity to group up with your team."
 msgstr ""
-"Les manches commencent par un délai de grâce de dix secondes pendant lequel "
+"Les manches commencent par un délai de grâce de dix secondes au cours duquel "
 "les armes ne peuvent pas être utilisées, ce qui vous laisse le temps de vous "
 "regrouper avec votre équipe."
 
@@ -1892,10 +1892,11 @@ msgid ""
 "need to be unfrozen to re-enter the round. The round ends when all players "
 "from all opposing teams are frozen, scoring the remaining team a point."
 msgstr ""
-"%s est un type de partie en équipes en plusieurs manches où les joueurs "
-"éliminés sont gelés et doivent être dégelés pour pouvoir réintégrer la "
-"manche. La manche se termine lorsque tous les joueurs des équipes adverses "
-"sont gelés, ce qui rapporte un point à l'équipe restante."
+"%s est un type de partie en équipe qui se joue en plusieurs manches, au "
+"cours desquelles les joueurs éliminés sont gelés et doivent être dégelés "
+"pour pouvoir réintégrer la manche. La manche se termine lorsque tous les "
+"joueurs des équipes adverses sont gelés, ce qui rapporte un point à l'équipe "
+"restante."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:10
 msgid ""
@@ -1907,8 +1908,7 @@ msgstr ""
 "Les joueurs gelés dégèlent lentement au fil du temps, mais ils dégèlent "
 "beaucoup plus rapidement lorsqu'ils sont « réanimés » par un coéquipier se "
 "trouvant à proximité immédiate. De plus, infliger des dégâts aux joueurs "
-"gelés de l'équipe adverse contribue à les dégeler, il est donc préférable de "
-"l'éviter."
+"gelés de l'équipe adverse contribue à les dégeler, cela est donc à éviter."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:12
 msgid ""
@@ -1916,10 +1916,10 @@ msgid ""
 "grace period where weapons cannot be fired, meaning it's a good opportunity "
 "to grab as many pickups as you can."
 msgstr ""
-"Comme dans beaucoup d'autres types de partie en plusieurs manches, celles-ci "
-"commencent par une période de grâce de dix secondes pendant laquelle les "
-"armes ne peuvent pas être utilisées, ce qui vous laisse le temps de "
-"récupérer autant d'objets que possible."
+"Comme dans beaucoup d'autres types de partie joués en plusieurs manches, "
+"celles-ci commencent par une période de grâce de dix secondes au cours de "
+"laquelle les armes ne peuvent pas être utilisées, ce qui vous laisse le "
+"temps de récupérer autant d'objets que possible."
 
 #: qcsrc/common/gametypes/gametype/freezetag/freezetag.qc:13
 msgid ""
@@ -1933,8 +1933,8 @@ msgstr ""
 "Réanimer discrètement un coéquipier le ramènera dans la partie pour vous "
 "aider à prendre l'avantage sur vos adversaires, mais cela doit être fait "
 "avec prudence, car les ennemis surveillent souvent de près les joueurs gelés "
-"pour s'assurer qu'ils ne sont pas réanimés. C'est pourquoi il est important "
-"d'avoir une bonne communication au sein de l'équipe, en particulier lorsque "
+"pour s'assurer qu'ils ne sont pas réanimés. C'est pourquoi une bonne "
+"communication au sein de l'équipe est importante, en particulier lorsque "
 "vous êtes gelé, afin de pouvoir indiquer à vos coéquipiers où se trouvent "
 "les ennemis."
 
@@ -1959,12 +1959,12 @@ msgid ""
 "from each other. The player who frags the most monsters overall wins the "
 "match."
 msgstr ""
-"%s est un type de partie unique en plusieurs manches au cours desquelles une "
-"horde de monstres apparaît tout autour de la carte et les joueurs doivent "
-"essayer d'en éliminer le plus possible. Comme les joueurs ne peuvent pas "
-"s'infliger mutuellement des dégâts, ils se battent alors pour éliminer les "
-"monstres aux dépends des autres. Le joueur qui élimine le plus de monstres "
-"remporte la partie."
+"%s est un type de partie unique joué en plusieurs manches au cours "
+"desquelles une horde de monstres apparaît tout autour de la carte, les "
+"joueurs devant essayer d'en éliminer le plus possible. Comme les joueurs ne "
+"peuvent pas s'infliger mutuellement des dégâts, ils se battent alors pour "
+"éliminer les monstres aux dépends des autres. Le joueur qui élimine le plus "
+"de monstres remporte la partie."
 
 #: qcsrc/common/gametypes/gametype/invasion/invasion.qc:11
 msgid ""
@@ -1987,7 +1987,7 @@ msgid ""
 "%s is a free-for-all match where a ball spawns randomly on the map and the "
 "goal is to hold the ball for as long as possible."
 msgstr ""
-"%s est une partie de type « chacun pour soi », où une balle apparaît "
+"%s est un type de partie en mode chacun pour soi, où une balle apparaît "
 "aléatoirement sur la carte et où le but est de conserver celle-ci le plus "
 "longtemps possible."
 
@@ -2008,8 +2008,8 @@ msgid ""
 "get bored and teleport itself elsewhere."
 msgstr ""
 "Quand le porteur de balle est éliminé, la balle tombe au sol et n'importe "
-"qui peut la ramasser. Si personne ne la ramasse après un certain temps, elle "
-"finit par s'ennuyer et se téléporter ailleurs."
+"qui peut la ramasser. Si personne ne la ramasse passé un certain délai, elle "
+"finit par se téléporter ailleurs."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qc:15
 #, c-format
@@ -2017,8 +2017,8 @@ msgid ""
 "%s rewards good fragging but also good movement, since the better you can "
 "evade attacks, the longer you can keep the ball."
 msgstr ""
-"%s récompense les frags mais aussi les bons déplacements, car mieux vous "
-"savez éviter les attaques, plus longtemps vous pouvez garder la balle."
+"Les frags sont recompensés en %s, ainsi que les mouvements rusés, car mieux "
+"vous savez esquiver les attaques, plus longtemps vous pouvez garder la balle."
 
 #: qcsrc/common/gametypes/gametype/keepaway/keepaway.qh:11
 msgid "Hold the ball to get points for kills"
@@ -2037,12 +2037,11 @@ msgid ""
 "after a ten second period, and the location of all keys will be visible on "
 "the radar after a few seconds."
 msgstr ""
-"%s est un type de partie en plusieurs manches auquel participent plusieurs "
-"équipes. Chaque équipe commence avec une clé et doit récupérer toutes les "
-"clés pour remporter la manche. Le membre de l'équipe qui reçoit la clé au "
-"début de la manche est sélectionné au hasard après une période de dix "
-"secondes, et l'emplacement de toutes les clés sera visible sur le radar "
-"après quelques secondes."
+"%s est un type de partie en équipe joué en plusieurs manches. Chaque équipe "
+"commence avec une clé et doit collecter toutes les clés pour remporter la "
+"manche. Le membre de l'équipe qui reçoit la clé au début de la manche est "
+"sélectionné au hasard après une période de dix secondes. L'emplacement de "
+"toutes les clés devient visible sur le radar quelques secondes plus tard."
 
 #: qcsrc/common/gametypes/gametype/keyhunt/keyhunt.qc:12
 #, c-format
@@ -2086,12 +2085,12 @@ msgid ""
 "health and armor do not regenerate, similar to gametypes like %s. Similarly, "
 "item pickups don't spawn on the map."
 msgstr ""
-"%s est un type de partie « chacun pour soi » où les joueurs commencent avec "
-"un certain nombre de vies et sont éliminés de la partie une fois qu'ils les "
-"ont toutes perdues. Les joueurs apparaissent avec toutes les armes "
+"%s est un type de partie en mode chacun pour soi, où les joueurs commencent "
+"avec un certain nombre de vies et sont éliminés de la partie une fois qu'ils "
+"les ont toutes perdues. Les joueurs apparaissent avec toutes les armes "
 "disponibles et un maximum de santé et d'armure, la santé et l'armure ne se "
 "régénérant pas, tout comme dans d'autres types de partie tels que %s. De "
-"même, les objets à ramasser n'apparaissent pas sur la carte."
+"même, il n'y a aucun objet à ramasser sur la carte."
 
 #: qcsrc/common/gametypes/gametype/lms/lms.qc:13
 msgid ""
@@ -2111,11 +2110,11 @@ msgid ""
 "percentage of health when they attack leaders, like in the %s mutator."
 msgstr ""
 "Les joueurs qui mènent la partie avec au moins 2 vies d'avance se mettent à "
-"briller et deviennent périodiquement visibles pendant quelques secondes par "
-"tous les joueurs à l'aide d'une balise au-dessus de leur tête, afin d'éviter "
-"qu'ils ne cherchent à se cacher. Les joueurs qui ne sont pas en tête volent "
-"un petit pourcentage de santé lorsqu'ils attaquent les meneurs, comme dans "
-"le mutateur %s."
+"briller et deviennent périodiquement visibles par tout le monde durant "
+"quelques secondes à l'aide d'une balise au-dessus de leur tête, afin "
+"d'éviter qu'ils ne cherchent à se cacher. Les joueurs qui ne sont pas en "
+"tête volent un petit pourcentage de santé lorsqu'ils attaquent les meneurs, "
+"comme dans le mutateur %s."
 
 #: qcsrc/common/gametypes/gametype/lms/lms.qh:11
 msgid "Last Man Standing"
@@ -2148,13 +2147,13 @@ msgid ""
 "if possible. Points are deducted when you walk into hazards, but not when "
 "you do movement tricks like blaster jumping since self damage is disabled."
 msgstr ""
-"Il se distingue par son système de points unique, qui prend en compte à la "
-"fois les frags et les dégâts infligés. Cela signifie que si vous êtes sur le "
-"point d'éliminer un joueur, vous serez tout de même récompensé par des "
-"points, mais il est toujours préférable de porter le coup fatal si possible. "
-"Des points sont retirés lorsque vous subissez des tirs ennemis, mais pas "
-"lorsque vous effectuez des figures telles que des sauts avec votre blaster, "
-"car les dégâts auto-infligés sont désactivés."
+"Ce type de partie se distingue par son système de points unique, qui prend "
+"en compte à la fois les frags et les dégâts infligés. Cela signifie que si "
+"vous manquez de peu d'éliminer un joueur, vous serez tout de même récompensé "
+"par des points, mais il est toujours préférable de porter le coup fatal si "
+"possible. Des points sont retirés lorsque vous subissez des tirs ennemis, "
+"mais pas lorsque vous effectuez des figures telles que des sauts avec votre "
+"blaster, car les dégâts auto-infligés sont désactivés."
 
 #: qcsrc/common/gametypes/gametype/mayhem/mayhem.qc:15
 #, c-format
@@ -2204,7 +2203,7 @@ msgid ""
 msgstr ""
 "%s se joue généralement soit comme le football, où les joueurs courent vers "
 "la balle pour la frapper, soit comme le basket-ball, où les joueurs ont un "
-"%s afin de pouvoir passer la balle et intercepter les passes."
+"%s afin de pouvoir se passer la balle et intercepter les passes."
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qc:12
 msgid ""
@@ -2316,7 +2315,7 @@ msgid ""
 msgstr ""
 "Avant le début de la course proprement dite, une séance de qualification "
 "permet de déterminer la grille de départ en fonction du meilleur temps de "
-"chaque joueur sur le tour. Cette étape est très similaire à %s, car les "
+"chaque joueur sur un tour. Cette étape est très similaire à %s, car les "
 "armes ne peuvent pas être utilisées pour gêner les autres joueurs, mais "
 "peuvent tout de même servir à courir plus vite."
 
@@ -2381,7 +2380,7 @@ msgid ""
 msgstr ""
 "Les équipes sont sélectionnées au hasard au début de la manche, l'équipe des "
 "chasseurs étant légèrement moins nombreuse, puis la manche commence par une "
-"brève période d'échauffement pendant laquelle les objets peuvent être "
+"brève période d'échauffement au cours de laquelle les objets peuvent être "
 "ramassés, mais les armes ne peuvent pas être utilisées."
 
 #: qcsrc/common/gametypes/gametype/survival/survival.qc:16
@@ -2395,7 +2394,7 @@ msgstr ""
 "éliminent, à condition qu'ils survivent à la manche, et des points sont "
 "déduits pour chaque coéquipier éliminé. Des points supplémentaires sont "
 "également attribués aux survivants qui survivent jusqu'à la fin du temps "
-"imparti pour la manche."
+"imparti de la manche."
 
 #: qcsrc/common/gametypes/gametype/survival/survival.qh:12
 msgid "Identify and eliminate all the hunters before all your allies are gone"
@@ -2411,7 +2410,7 @@ msgstr "Survie"
 #, c-format
 msgid "%s is the team version of %s, played in teams rather than solo."
 msgstr ""
-"%s est la version par équipe de %s, qui se joue en équipes plutôt qu'en solo."
+"%s est la version par équipe de %s, qui se joue en équipe plutôt qu'en solo."
 
 #: qcsrc/common/gametypes/gametype/tdm/tdm.qc:11
 msgid ""
@@ -2453,9 +2452,9 @@ msgid ""
 "Scoring is similar to in %s, except that points are awarded for frags for "
 "all members of the team of the player holding the ball."
 msgstr ""
-"Le système de points est similaire à celui de %s, sauf que les points pour "
-"les frags sont attribués à tous les membres de l'équipe du joueur qui "
-"détient la balle."
+"Le système de points est similaire à celui de %s, sauf que les points "
+"obtenus pour les frags sont attribués à tous les membres de l'équipe du "
+"joueur qui détient la balle."
 
 #: qcsrc/common/gametypes/gametype/tka/tka.qh:13
 msgid "Keep the ball in your team's possession to get points for kills"
@@ -2477,8 +2476,8 @@ msgid ""
 msgstr ""
 "%s est un type de partie en équipe basé sur %s, utilisant le même système de "
 "points. Il présente de nombreuses similitudes avec %s, l'une des principales "
-"différences étant que %s est un type de partie en plusieurs manches, sans "
-"oublier bien sûr les différences au niveau du système de points."
+"différences étant que %s est un type de partie joué en plusieurs manches, "
+"sans oublier bien sûr les différences en terme de système de points."
 
 #: qcsrc/common/gametypes/gametype/tmayhem/tmayhem.qc:13
 msgid ""
